# RUST-WASM-NEAR

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  ava.config.cjs  package.json
contract/: Cargo.toml
contract/src/: lib.rs
integration-tests/rs/: Cargo.toml
integration-tests/rs/src/: tests.rs
integration-tests/ts/: main.ava.ts
